# aht-with-preferences

./: .gitignore  dqn.py  main.py  ppo.py  pyproject.toml  requirements.txt
cluster_scripts/: gen_experiments.py.template  job.sh.template
scripts/: batch_script.sh  make_batch_script.py  make_plots.py  push-to-server  train.py  visualise_bc_policy.py  visualise_policy.py
scripts/gcbc/: bc_lbf.py  bc_reaching.py
scripts/lbf/: mcts.py  ppo.py  reference.py
scripts/reaching/: mcts.py  ppo.py  reference.py
src/: evaluate.py  utils.py
src/algos/: mcts.py  models.py  ppo.py
src/algos/liam/: __init__.py  liam.py
src/algos/mcts/: mcts.py
src/algos/new_5/: __init__.py  new_5.py
src/algos/new_6/: __init__.py  new_6.py
src/algos/ppo/: ppo.py
src/architectures/: actor_critic.py
src/environments/: __init__.py  environment.py
src/environments/lbf/: __init__.py  evals.py  lbf.py  rendering.py
src/environments/pursuit/: __init__.py  pursuit.py
src/environments/reaching/: __init__.py  evals.py  reaching.py  rendering.py
src/environments/simple_gridworld/: __init__.py  rendering.py  simple_gridworld.py
tests/: test_aht_with_preferences.py
