[tool.poetry]
name = "aht-with-preferences"
version = "0.1.0"
description = ""
authors = ["Max Taylor-Davies <maxtaylordavies@gmail.com>"]
packages = [
    { include = "src" },
]

# [tool.poetry.dependencies]
# python = "^3.10"
# jax = "^0.5.0"
# gymnax = "^0.0.8"
# tqdm = "^4.67.1"
# distrax = "^0.1.5"
# rejax = "^0.1.1"

# [tool.poetry.dev-dependencies]
# pytest = "^5.2"

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
